[package]
name = "rg-searcher-fuzz-test"
version = "0.1.0"
authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
edition = "2018"

[dependencies]
arbitrary = "*"
better-panic = "*"
bufrng = "*"
honggfuzz = "0.5"
grep-matcher = { path = "../ripgrep/grep-matcher" }
grep-regex = { path = "../ripgrep/grep-regex" }
grep-searcher = { path = "../ripgrep/grep-searcher" }
rand_chacha = "0.2"
regex_generate = "0.2"
rand = "0.7"
